# shard

./: .editorconfig  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SPEC.md
.cargo/: config.toml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
shard-cli/: Cargo.toml  README.md
shard-cli/src/: main.rs  state.rs
shard-cli/src/commands/: keygen.rs  listen.rs  mod.rs  send.rs  session.rs  shell.rs  util.rs
shard-core/: Cargo.toml  README.md
shard-core/benches/: protocol.rs
shard-core/src/: consts.rs  error.rs  frame.rs  lib.rs  types.rs  validation.rs
shard-core/src/crypto/: aead.rs  agreement.rs  hkdf.rs  mod.rs
shard-sdk/: Cargo.toml  README.md
shard-sdk/src/: client.rs  config.rs  ffi.rs  lib.rs  server.rs  session.rs  util.rs
tools/: integrity_attack.py  malformed_packet.py  replay_attack.py
