[workspace]
members = [
    "shard-core",
    "shard-sdk",
    "shard-cli",
]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2024"
authors = ["SirCesarium <contact.cesarmarcano@gmail.com>"]
license = "MIT"
description = "Lightweight encrypted command delivery protocol over UDP"
repository = "https://github.com/SirCesarium/shard"
readme = "README.md"
