[package]
name = "shard-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
shard-sdk = { version = "0.1.0", path = "../shard-sdk" }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
