[package]
name = "shard-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "shard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
shard-sdk = { version = "0.2.0", path = "../shard-sdk" }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
rustyline = "17.0.2"
