[package]
name = "shard-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
byteorder = "1.5.0"
ring = "0.17.14"
zerocopy = { version = "0.8.47", features = ["derive"] }
thiserror = { version = "*", features = []}

[dev-dependencies]
rand = "0.10.0"
