[package]
name = "shard-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
byteorder = "1.5.0"
ring = "0.17.14"
zerocopy = { version = "0.8.47", features = ["derive"] }
thiserror = { version = "2.0.18", features = [] }

[dev-dependencies]
rand = "0.10.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "protocol"
harness = false
