[package]
name = "shard-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-util = "0.3.32"
rand = "0.10.0"
shard-core = { version = "0.1.3", path = "../shard-core" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
zerocopy = "0.8.47"
